--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@babel/plugin-transform-class-properties": "^7.27.1",
     "@babel/plugin-transform-private-property-in-object": "^7.27.1",
     "@expo/metro-runtime": "~4.0.1",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.14",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
@@ -28,13 +28,13 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
-    "react-native": "0.76.3",
+    "react-native": "0.76.9",
     "react-native-calendars": "^1.1312.0",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.14.1",
-    "react-native-reanimated": "^3.16.3",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.3.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "styled-components": "^6.1.13"
